Fixing the avatar in Safari to have rounded corners on the image too (bleeds out from behind the border otherwise)

--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -45,6 +45,10 @@ body {
   -webkit-border-radius: 20px;
 }
 
+#nav #avatar img {
+  -webkit-border-radius: 10px; /* other-wise the image bleeds out from behind the rounded corners */
+}
+
 #nav ul {
   list-style-type: none;
 }
